--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,7 @@
 .navbar-brand.me-auto{
     font-weight: 500;
     color: #000000;
-    font-size: 18px;
+    font-size: 20px;
     transition: 0.3s color;
   
 }
@@ -13,25 +13,28 @@
 }
 
 .navbar{
-    background-color: white;
+    background-color: transparent;
+    /* background-color: rgb(240,255,240); */
+
     height: 80px;
     margin: 10px;
     border-radius: 16px;
+    border: rgb(255, 255, 255) solid 3px;
     padding: 0.5rem;
 }
 
 .login-button{
     background-color: #ffffff;
-    color: #1E90FF;
+    color: #000000;
     font-size: .5em;
+    font-weight: bold;
     padding: 18px 30px;
     border-radius: 10px;
     text-decoration: none;
-
     transition: 0.3s background-color;
 }
 .login-button:hover{
-    background-color: #1E90FF;
+    background-color: rgb(104, 171, 104);
     color: #ffffff;
 
 }
@@ -45,13 +48,18 @@
     outline: none;
 }
 .nav-link.mx-lg-2{
-    color: #666777;
-    font-weight: 500;
+    /* color: #ffffff; */
+    
+    /* font-weight: 600; */
     position: relative;
   
 }
+.nav-item a{
+    font-size: 18px;
+    color: #ffffff;
+}
 .nav-link.mx-lg-2:hover,.nav-link.mx-lg-2.active{
-        color: #000;
+        color: #ffffff;
 }
 @media(min-width:991px){
     .nav-link::before{
@@ -73,30 +81,36 @@
 }
 
 .hero-section{
-    background-image: url("../images/doctor.jpg");
-    background-position: center;
+    background-image: url("../images/portrait-doctor.jpg");
+    background-position:center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
     width: 100%;
     height: 100vh;
+    overflow: hidden;
 }
 
  
-.hero-section::before{
-    background-color: rgba(35, 223, 247, 0.25);
+
+.hero-section .container{
+    height: 100vh;
+    width: 50%;
+    margin-left: 19.5em;
+    z-index: 1;
+    position: relative;
+    background-color: rgba(130, 207, 178, 0.25);
+    /* background-color: #1E90FF; */
+    
+} 
+/* .hero-section .container ::before{
+    background-color: rgba(128,128,128, 0.25);
     content: '';
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-}
-.hero-section .container{
-    height: 100vh;
-    z-index: 1;
-    position: relative;
-    
-} 
+} */
 .hero-section h1{
     font-size: 2.5em;
    font-weight: bold;
@@ -110,7 +124,7 @@
      border-radius: 100px;
     height: 100px;
     width: 100px;
-    background-color: #00bbf0;
+    background-color: #1E90FF;
 }
 .d-flex.justify-content-evenly div a img{
     height: 70px;
@@ -155,7 +169,7 @@
         border-radius: 100px;
        height: 80px;
        width: 80px;
-       background-color: #00bbf0;
+       background-color: #1E90FF;
    }
     .d-flex.justify-content-evenly div a img{
         height: 50px;
@@ -215,8 +229,10 @@
 .footer{
     
     height: 18em;
-    color: #fff;
-    background: linear-gradient(to left,#FFFFFF,#1E90FF);
+    color: #000000;
+    /* background: linear-gradient(to left,#FFFFFF,#1E90FF); */
+    background:#ffffff;
+
   
 }
 @media(max-width: 992px){
@@ -248,7 +264,7 @@
 	width: 450px;
 	height: 400px;
 	padding: 80px 40px;
-	background: rgba(30,144,255, 0.4);
+	background: rgb(255, 255, 255);
 }
 .session{
     
@@ -401,7 +417,14 @@
     background-size: cover;
 }
 #card{
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(255, 255, 255);
 }
 
-
+/* visitez-nous */
+.visitez-nous .paragraphe{
+    font-size: 15px;
+    text-align: justify;
+    width: 40em;
+    padding-top: 5em;
+    margin-left: 14em;
+}
