--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,9 +71,7 @@ body{
 	cursor: pointer;
 	box-shadow: -4px 0px 5px #00000036;
 }
-.get-pro:hover{
-	
-}
+
 #scrollUp {
 	bottom: 15px;
 	right: 15px;
@@ -187,11 +185,11 @@ body{
 	background:#44ce6f;
 }
 /*=============================
-	End Global CSS 
+	End Global CSS
 ===============================*/
 
 /*===================
-	Start Header CSS 
+	Start Header CSS
 =====================*/
 .header{
 	background-color:#fff;
@@ -644,10 +642,11 @@ body{
 	background: #fff;
 	margin: 0;
 	padding: 0;
-	height: 230px;
+	/* height: 230px; */
 }
 .schedule .schedule-inner {
 	position: relative;
+
 	transform: translateY(-50%);
 	z-index:9;
 }
@@ -751,9 +750,7 @@ body{
 .schedule .single-schedule a i{
 	margin-left:10px;
 }
-.schedule .single-schedule .time-sidual{
-	
-}
+
 .schedule .single-schedule .time-sidual{
 	overflow:hidden;
 	margin-top:17px;
@@ -771,154 +768,26 @@ body{
 	display:inline-block;
 	float:right;
 }
-.schedule .single-schedule .day-head .time {
-	font-weight: 400;
-	float: right;
-}
+
 /*=============================
 	End Schedule CSS
 ===============================*/
 
-/*=============================
-	Start Feautes CSS
-===============================*/
-.Feautes{
-	padding-top:0;
-}
-.Feautes.index2{
-	padding-top:100px;
-}
-.Feautes.testimonial-page{
-	padding-top:100px;
-}
-.Feautes .single-features{
-	text-align:center;
-	position:relative;
-	padding:10px 20px;
-}
-.Feautes .single-features::before {
-	position: absolute;
-	content: "";
-	right: -72px;
-	top: 60px;
-	width: 118px;
-	border-bottom: 3px dotted #1a76d1;
-}
-.Feautes .single-features.last::before{
-	display:none;
-}
-.Feautes .single-features .signle-icon{
-	position:relative;
-}
-.Feautes .single-features .signle-icon i{
-	font-size:50px;
-	color:#1a76d1;
-	position:absolute;
-	left:50%;
-	margin-left:-50px;
-	top:0;
-	height:100px;
-	width:100px;
-	line-height:100px;
-	text-align:center;
-	border:1px solid #dddddd;
-	border-radius:100%;
-	-webkit-transition:all 0.4s ease;
-	-moz-transition:all 0.4s ease;
-	transition:all 0.4s ease;
-}
-.Feautes .single-features:hover .signle-icon i{
-	background:#1A76D1;
-	color:#fff;
-	border-color:transparent;
-}
-.Feautes .single-features h3{
-	padding-top: 128px;
-	color:#2C2D3F;
-	font-weight:600;
-	font-size:21px;
-}
-.Feautes .single-features p {
-	margin-top: 20px;
-}
-/*=============================
-	End Feautes CSS
-===============================*/
 
-/*=======================
-	Start Fun Facts CSS
-=========================*/
-.fun-facts{
-	position:relative;
-}
-.fun-facts.section{
-	padding:120px 0;
-}
-.fun-facts{
-	background:url('img/fun-bg.jpg');
-	background-size:cover;
-	background-repeat:no-repeat;
-}
-.fun-facts .single-fun {
-	
-}
-.fun-facts .single-fun i {
-	position: absolute;
-	left: 0;
-	font-size: 62px;
-	color: #fff;
-	height: 70px;
-	width: 70px;
-	line-height: 67px;
-	font-size: 28px;
-	text-align: center;
-	padding: 0;
-	margin: 0;
-	border: 2px solid #fff;
-	border-radius: 0px;
-	top: 50%;
-	margin-top: -35px;
-	-webkit-transition: all 0.4s ease;
-	-moz-transition: all 0.4s ease;
-	transition: all 0.4s ease;
-	border-radius: 50%;
-}
-.fun-facts .single-fun:hover i{
-	color:#1A76D1;
-	background:#fff;
-	border-color:transparent;
-}
-.fun-facts .single-fun .content {
-	padding-left: 80px;
-}
-.fun-facts .single-fun span {
-	color: #fff;
-	font-weight: 600;
-	font-size: 30px;
-	position: relative;
-	display: block;
-	-webkit-transition: all 0.4s ease;
-	-moz-transition: all 0.4s ease;
-	transition: all 0.4s eas;
-	display: block;
-	margin-bottom: 7px;
-}
-.fun-facts .single-fun p{
-	color:#fff;
-	font-size:15px;
-}
-/*===================
-	End Fun Facts
-=====================*/
 
 /*===================
 	Why choose CSS
 =====================*/
+
+.why-choose{
+    margin-top:-7.5em;
+}
 .why-choose .choose-left h3{
 	font-size:24px;
 	font-weight:600;
 	color:#2C2D3F;
 	position:relative;
+
 	padding-bottom:20px;
 	margin-bottom:24px;
 }
@@ -927,6 +796,7 @@ body{
 	content:"";
 	left:0;
 	bottom:0;
+
 	height:2px;
 	width:50px;
 	background:#1a76d1;
@@ -934,7 +804,7 @@ body{
 .why-choose .choose-left p{
 	margin-bottom:35px;
 }
-.why-choose .choose-left .list{}
+
 .why-choose .choose-left .list li {
 	color: #868686;
 	margin-bottom: 12px;
@@ -1673,7 +1543,7 @@ body{
 	position:relative;
 }
 .clients .single-clients{
-	
+
 }
 .clients .single-clients img {
 	width: 100%;
@@ -1688,7 +1558,7 @@ body{
 
 /*====================
 	Start Team CSS
-======================*/ 
+======================*/
 .team{
 	background-image:url('img/testi-bg.jpg');
 	background-size:cover;
@@ -1699,7 +1569,7 @@ body{
 .team.single-page{
 	background:#fff;
 }
-.team .section-title h2{
+.team .why-choose-title h2{
 	color:#fff;
 }
 .team .section-title p{
@@ -1877,7 +1747,7 @@ body{
 	margin-top: 30px;
 }
 .doctor-details-item .doctor-details-work .time-sidual{
-	
+
 }
 .doctor-details-item .doctor-details-work .time-sidual{
 	overflow:hidden;
@@ -1902,7 +1772,7 @@ body{
 	padding-top: 70px;
 }
 .doctor-details-item .doctor-details-biography {
- 
+
 }
 .doctor-details-item .doctor-details-biography h3 {
   font-weight: 600;
@@ -1939,7 +1809,7 @@ body{
 }
 /*====================
 	End Team CSS
-======================*/ 
+======================*/
 
 /*=======================
 	Start Blog CSS
@@ -2561,8 +2431,7 @@ body{
 	margin-bottom: 20px;
 	text-transform: capitalize;
 }
-.news-single .form {
-}
+
 .news-single .form-group {
 	position: relative;
 	display: block;
@@ -2626,7 +2495,7 @@ body{
 	-moz-transition: all 0.4s ease;
 	transition: all 0.4s ease;
 	padding: 15px 30px;
-	
+
 }
 .news-single .form-group .button:hover {
 	background: #353535;
@@ -2682,18 +2551,18 @@ body{
 	box-shadow: 0px 0px 10px #00000024;
 	border-radius: 5px;
 }
-.appointment.single-page .title{}
+
 .appointment.single-page .title h3 {
 	font-size: 25px;
 	display: block;
 	margin-bottom: 10px;
 	font-weight:600;
 }
-.appointment.single-page .title p{}
+
 .appointment .form{
 	margin-top:30px;
 }
-.appointment .form .form-group{}
+
 .appointment .form input {
 	width: 100%;
 	height: 50px;
@@ -2747,7 +2616,7 @@ body{
 	color:#fff;
 	background: #1A76D1;
 }
-.appointment .appointment-image{}
+
 .appointment.single-page .button .btn{
 	width:100%;
 }
@@ -2891,7 +2760,7 @@ body{
 	margin: 0;
 	margin-top: 20px;
 	display:inline-block;
-	
+
 }
 .login .login-form .checkbox label {
 	font-size: 14px;
@@ -3046,7 +2915,7 @@ body{
 	margin: 0;
 	margin-top: 20px;
 	display:inline-block;
-	
+
 }
 .register .register-form .checkbox label {
 	font-size: 14px;
@@ -3276,7 +3145,7 @@ body{
 	margin: 0;
 	margin-top: 20px;
 	display:inline-block;
-	
+
 }
 .contact-us .contact-us-form .checkbox label {
 	font-size: 14px;
@@ -3377,7 +3246,7 @@ body{
 	color:#fff;
 	font-size:18px;
 	font-weight:600;
-	
+
 }
 .contact-us .single-info .content p{
 	color:#fff;
@@ -3395,7 +3264,7 @@ body{
 	background-size: cover;
 	height: 100%;
 	width: 100%;
-} 
+}
 
 /*=========================
    End Contact Us CSS
@@ -3403,7 +3272,7 @@ body{
 
 /*========================
 	Start Error 404 CSS
-==========================*/ 
+==========================*/
 .error-page {
 	text-align: center;
 	background: #fff;
@@ -3462,11 +3331,11 @@ body{
 }
 /*========================
 	End Error 404 CSS
-==========================*/ 
+==========================*/
 
 /*===========================
 	Start Mail Success CSS
-=============================*/ 
+=============================*/
 .mail-seccess {
 	text-align: center;
 	background: #fff;
@@ -3497,11 +3366,11 @@ body{
 }
 /*===========================
 	End Mail Success CSS
-=============================*/ 
+=============================*/
 
 /*=========================
 	Start Newsletter CSS
-===========================*/  
+===========================*/
 .newsletter{
 	background:#EDF2FF;
 }
@@ -3554,7 +3423,7 @@ body{
 }
 /*=========================
 	End Newsletter CSS
-===========================*/  
+===========================*/
 
 /*===============================
 	Start Doctor Calendar CSS
@@ -3942,7 +3811,7 @@ body{
 	opacity:0.1;
 }
 .footer .single-footer{
-	
+
 }
 .footer .single-footer .social{
 	margin-top:25px;
@@ -3973,7 +3842,7 @@ body{
 	border-color:transparent;
 }
 .footer .single-footer .social li a i{
-	
+
 }
 .footer .single-footer.f-link li a i{
 	margin-right:10px;
